add description updates

--- a/index.html
+++ b/index.html
@@ -136,8 +136,10 @@
 
   <section class="container text-justify">
 
-      
-      <p>I'm a PhD candidate at New York University advised by Professor 
+    <p>Hi! I&rsquo;m a Computer Science student at Caltech researching deep learning, computer vision, representation learning, and probabilistic modeling in the domains of neuroscience, medical imaging, and astronomy.</p>
+    <!-- <p>  I am very lucky to be advised by Professors <a href="https://cims.nyu.edu/~rajeshr/">Rajesh Ranganath</a> and <a href="https://physics.nyu.edu/experimentalparticle/group.html">Kyle Cranmer</a>.</p> -->
+    <p>I&rsquo;m interested in brain-inspired learning, RL, and generative modeling in scientific applications.</p>
+      <!-- <p>I'm a PhD candidate at New York University advised by Professor 
         <a href="https://cims.nyu.edu/~rajeshr/">Rajesh Ranganath</a>. 
         I'm broadly interested in advancing the reliability of machine learning models. This includes controllable generation and alignment of generative models as well as out-of-distribution detection and generalization. I'm also interested in applications for health and science. I'm grateful to be a <a href="https://nyudatascience.medium.com/deepmind-fellow-profile-lily-zhang-8671b9b36812">DeepMind Scholar</a>, Visiting Researcher at Facebook AI Research, and a JP Morgan Chase PhD Fellow.</p>
 
@@ -151,10 +153,10 @@
         <a href="https://scholar.google.com/citations?user=eyYubf4AAAAJ&hl=en">Jukka-Pekka “JP” Onnela</a> (biostatistics),
         <a href="https://csb.mgh.harvard.edu/john_higgins">John M. Higgins</a> (pathology, systems biology), and
         <a href="https://scholar.google.com/citations?user=QC5BwP0AAAAJ&hl=en">Dustin Tingley</a> (government, political science).
-        </p>
-      <p>Feel free to <a href="mailto:lily.h.zhang@nyu.edu">contact me</a> for research collaborations or other engagements.</p>
+        </p> -->
+      <p>Feel free to <a href="mailto:ajchandr@caltech.edu">contact me</a> for research collaborations or other engagements.</p>
 
-      <p><em>Update (Fall 2024)</em>: I'm currently on the job market for research scientist positions.</p>
+      <p><em>Update (Fall 2024)</em>: I'm currently applying to PhD programs!</p>
 
 
 
