--- a/index.html
+++ b/index.html
@@ -154,9 +154,11 @@
         <a href="https://csb.mgh.harvard.edu/john_higgins">John M. Higgins</a> (pathology, systems biology), and
         <a href="https://scholar.google.com/citations?user=QC5BwP0AAAAJ&hl=en">Dustin Tingley</a> (government, political science).
         </p> -->
-      <p>Feel free to <a href="mailto:ajchandr@caltech.edu">contact me</a> for research collaborations or other engagements.</p>
+      <!-- <p>Feel free to <a href="mailto:ajchandr@caltech.edu">contact me</a> for research collaborations or other engagements.</p> -->
 
+      <h3>News</h3>
       <p><em>Fall 2024</em>: I'm currently applying to PhD programs!</p>
+      <p><em>August 2024</em>: I have finished my Summer at the Allen Institute for Brain Sciences. Thanks to everyone at the Allen!</p>
 
 
 
@@ -183,7 +185,7 @@
 
 
       
-      <h3>Publications</h3>
+      <h3>Publications, Talks, and Projects</h3>
       <p>
         <!-- <span><strong><u>Rapid Model Comparison by Amortizing Across Models</u></strong></span><br/>
         <span><strong>Lily H. Zhang</strong> and Michael Hughes.</span><br/>
